# RustCompiler

./: Cargo.toml  Readme.md  flake.nix
src/: lexer.rs  lexer_test.rs  lib.rs  main.rs
